# localRag-Chat

./: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.js
dist-electron/: main.js
electron/: main.js
release/: builder-effective-config.yaml
src/: App.vue  main.js  pinia.js
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  server_cert.pem
src-tauri/src/commands/: Cargo.toml  ai_cmd.rs  auth_cmd.rs  crypto_cmd.rs  mod.rs
src-tauri/src/db/: ai.rs  crypto.rs  mod.rs
src-tauri/src/engine/: embedding.rs  embedding_cmd.rs  hybrid_search.rs  llm_service.rs  memory_service.rs  mod.rs  router_rules.rs  vector_index.rs
src-tauri/src/key/: key_cmd.rs  key_manager.rs  mod.rs
src/api/: ai.js
src/components/: AIUserChat.vue  AiHybrdSettings.vue  ApiSettings.vue  PasswordModal.vue  StreamingMarkdown.vue
src/components/ui/: Alert.vue  ConfirmDialog.vue  GlobalToast.vue
src/components/ui/ui-js/: confirm.js  globalToast.js  toast.js
src/embedding/: embeddingService.js  hybridSearch.js  llmService.js  searchContext.js  workerClient.js
src/embedding/workers/: embedding.worker.js  embeddingClient.js  llmService.js  routerRules.js  searchContext.js  workerClient.js
src/markdown/: markdown-engine.js  markdown.worker.js  markdownClient.js  renderers.js
src/router/: router.js
src/rustservice/: aiDatabase.js  cryptoDatabase.js  userDatabase.js
src/service/: aiUserService.js
src/store/: contextMenu.js  useStore.js
src/styles/: element-override.css  main.css
src/utils/: cryptoEngine.js  keyManager.js
