[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.2", features = [] }

[dependencies]
# ==========================================
# Tauri 核心依赖
# ==========================================
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11.2", features = ["protocol-asset"] }
tauri-plugin-log = "2"
tauri-plugin-dialog = "2"
tauri-plugin-stronghold = "2.3.1"

# ==========================================
# 业务逻辑依赖 (网络、数据库、加密等)
# ==========================================
tokio = { version = "1", features = ["full"] }
bytes = "1.4"
tokio-util = { version = "0.7", features = ["codec"] }
futures-util = { version = "0.3", features = ["sink"] }
argon2 = "0.5.3"
tokio-rustls = "0.26.4"
rustls = "0.23.40"
rustls-pemfile = "2.2.0"
rusqlite = { version = "0.40.0", features = ["bundled"] }
image = "0.25.6"
zeroize = "1.6"
p256 = { version = "0.13", features = ["ecdsa", "pem"] }
aes-gcm = "0.10"
rsa = "0.9"
rand = "0.8"
base64 = "0.21"
sha2 = "0.10"
pbkdf2 = "0.12"
fs_extra = "1.3"

# ==============================================
# 模型配置
# ==============================================
ort = { version = "=2.0.0-rc.12", features = ["ndarray", "load-dynamic"] }
tokenizers = "0.19"
ndarray = "0.15"
regex = "1.12.4"
reqwest = { version = "0.12", features = ["json"] }
uuid = { version = "1.8", features = ["v4"] }
itertools = "0.15.0"
jieba-rs = "0.10"

# =======================================================
# 🚀 必须加在最底部！让底层加密库性能飞起，把 1 分钟缩短到 0.1 秒
# =======================================================
[profile.dev]
opt-level = 0

[profile.dev.package."*"]
opt-level = 3

# ==============================================
# 模型配置
# ==============================================
[bundle]
resources = ["models/**/*"]

# ==============================================
# Release 正式包极限压缩 (显著减小 app.exe 体积)
# ==============================================
[profile.release]
panic = "abort"         # 遇到恐慌直接退出，不保留堆栈追踪代码
codegen-units = 1       # 牺牲一点编译速度，换取更好的体积优化
lto = true              # 开启跨文件链接优化，极大幅度减小体积
opt-level = "z"         # 专门为优化体积进行编译
strip = true
